syntax = "proto3";

package zoncoen.example;

import "proto/api/grpc/grpc.proto";
option go_package = "github.com/zoncoen/grpc-error-annotation/example/gen/example;example";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        option (zoncoen.api.grpc.error) = {
            invalid_argument: {
                description: "validation error",
            }
            already_exists: {}
        };
    }
}

message CreateUserRequest {
    string name = 1;
}

message CreateUserResponse {
    User user = 1;
}

message User {
    string user_id = 1;
    string name = 2;
}

